defconfig: disable core control and add pacman

--- a/arch/arm64/configs/tw_c9pro_defconfig
+++ b/arch/arm64/configs/tw_c9pro_defconfig
@@ -926,10 +926,12 @@ CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_CORE_CTL=y
+CONIFG_MSM_CORE_CTL_HELPER=y
+CONIFG_MSM_CORE_CTL is not set
 CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=n
 CONFIG_DEVFREQ_SPDM=y
 CONFIG_SPDM_SCM=y
+CONFIG_MSM_PACMAN=y
 
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
